--- a/Assignment_Two/Assignment.TWO.Rmd
+++ b/Assignment_Two/Assignment.TWO.Rmd
@@ -3,10 +3,10 @@ title: "Severe weather events impact on public health and the economy"
 author: "DanielH"
 date: "August 7, 2016"
 output:
+  pdf_document: default
   html_document:
     keep_md: yes
     theme: readable
-  pdf_document: default
 ---
 
 ---
@@ -123,7 +123,7 @@ sub_data %>%
   arrange(desc(fatalities)) %>%
   ggplot(aes(fct_reorder(evtype, fatalities), fatalities)) +
    geom_bar(stat="identity", fill= "red") +
-   labs(title = "Most harmful weather\n  events by Fatalities",
+   labs(title = "Most harmful weather events by Fatalities",
            x = "", y = "fatalities") +
   coord_flip()
 
@@ -153,7 +153,7 @@ sub_data  %>%
 We need to convert those levels to numbers/multipliers in order to have damage figures expressed in a consistent unit and make our analysis possible.
 
 
-```{r, fig.width= 7, fig.height=4}
+```{r, fig.width= 7, fig.height=5}
 
 # transform PROPDMGEXP
 sub_data_multip <- 
