--- a/Assignment_Two/Assignment.TWO.Rmd
+++ b/Assignment_Two/Assignment.TWO.Rmd
@@ -107,7 +107,7 @@ sub_data  %>%
   arrange(desc(injuries)) %>%
   ggplot(aes(fct_reorder(evtype, injuries), injuries)) +
    geom_bar(stat="identity", fill= "darkorange") +
-   labs(title = "Most harmful weather events by Injuries",
+   labs(title = "Most harmful weather events by injuries",
         x = "",
         y = "injuries") +
    coord_flip()
@@ -123,7 +123,7 @@ sub_data %>%
   arrange(desc(fatalities)) %>%
   ggplot(aes(fct_reorder(evtype, fatalities), fatalities)) +
    geom_bar(stat="identity", fill= "red") +
-   labs(title = "Most harmful weather events by Fatalities",
+   labs(title = "Most harmful weather events by fatalities",
            x = "", y = "fatalities") +
   coord_flip()
 
@@ -153,7 +153,7 @@ sub_data  %>%
 We need to convert those levels to numbers/multipliers in order to have damage figures expressed in a consistent unit and make our analysis possible.
 
 
-```{r, fig.width= 7, fig.height=5}
+```{r, fig.width= 7, fig.height=5, message=FALSE, warning=FALSE}
 
 # transform PROPDMGEXP
 sub_data_multip <- 
@@ -200,7 +200,7 @@ sub_data_multip %>%
 
 ```
 
-### Conclusion
+## Conclusion
   
   Floods, Hurricanes and Tornadoes cause the most overall economic damages. Tornadoes are also the most harmful type of event in terms of population health.
   
